Yamls/elasticsearch/es-master-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-master
  labels:
    component: elasticsearch
    role: master
spec:
  serviceName: elasticsearch-master
  replicas: 3
  selector:
    matchLabels:
      role: master
      component: elasticsearch
  template:
    metadata:
      labels:
        component: elasticsearch
        role: master
    spec:
      containers:
      - name: es-master
        image: stubbornrobot/kubernetes-elasticsearch:6.5.3.1
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 50m
        ports:
        - containerPort: 9300
          name: transport
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - name: master-storage
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: master-storage
    spec:
      storageClassName: search
      accessModes: [ ReadWriteOnce ]
      resources:
        requests:
          storage: 2Gi
