Yamls/elasticsearch/ingest.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: es-ingest
  labels:
    component: elasticsearch
    role: ingest
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: elasticsearch
        role: ingest
    spec:
      containers:
      - name: es-ingest
        image: stubbornrobot/kubernetes-elasticsearch:6.5.3.1
        resources:
          requests:
            cpu: 50m
          limits:
            cpu: 500m
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: transport
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /_cluster/health
            port: http
          initialDelaySeconds: 20
          timeoutSeconds: 5
        volumeMounts:
        - name: storage
          mountPath: /data
      volumes:
      - emptyDir:
          medium: ""
        name: storage
