Yamls/elasticsearch/es-data-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-data
  labels:
    component: elasticsearch
spec:
  selector:
    component: elasticsearch
    role: "data"
  ports:
  - name: transport
    port: 9300
    protocol: TCP
    targetPort: 9300
  type: ClusterIP
