Yamls/elasticsearch/es-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    component: elasticsearch
    role: data
spec:
  selector:
    component: elasticsearch
    role: data
  ports:
  - name: http
    port: 80
    targetPort: 9200
  - name: transport
    port: 9300
  type: LoadBalancer
